Fix alignment close icon and text in the modal

--- a/mon-pix/app/styles/components/_user-logged-menu.scss
+++ b/mon-pix/app/styles/components/_user-logged-menu.scss
@@ -102,10 +102,6 @@
   }
 }
 
-.logged-user-menu__icon {
-  margin-right: 8px;
-}
-
 .logged-user-menu__link--last {
   border-top: 1px solid $mercury-grey;
 }
